Correction to let it public on Github

--- a/TJtemplate_website.html
+++ b/TJtemplate_website.html
@@ -1,9 +1,8 @@
-<!--Replace text with information you want to put on your website-->
 <!doctype html>
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <title>My message to the world</title>
+    <title>My CSS to the world</title>
     <style>
       
       .favorite {background-color: lightgreen}
@@ -25,14 +24,13 @@
       h1 { font-family: Tahoma ;font-style: italic;color:white;cursor:progress}
       h2 {color:darkgoldenrod;text-decoration:underline; }
       h3 {color:rgb(184, 11, 141);text-decoration:solid }
-      h4 {font-size: larger; border ;}
+      h4 {font-size: larger;}
       p{ padding:10%;font-style:oblique}
     </style>
   </head>
   <!--Change white to the name of the color that you want your background to be
     and center to either start, center, or end depending on where you want your text to be aligned
-    https://javierferrersb.github.io/cursors/usa.png
-      cursor:url("https://javierferrersb.github.io/cursors/usa.png");
+
        style="background-color:white; text-align: start"-->
   <body>
     <h1>Me, Myself & I</h1>
@@ -49,8 +47,16 @@
         <li class="cinema"><a href="https://www.imdb.com/title/tt0093565/"> Moonstruck</a>  </li>        
       </ul>
     </div>
-    <p>INFORMATION ON SUBTOPIC 2</p>
-    <h2>SUBTOPIC 3</h2>
-    <p>INFORMATION ON SUBTOPIC 3</p>
+    <p>Music</p>
+    <h2>Top 3</h2>
+    <p>
+      <div>
+        <ol>
+          <li> <a href="https://www.youtube.com/watch?v=6NXnxTNIWkc">  The Beatles </a></li>
+          <li> <a href="https://www.youtube.com/watch?v=6NXnxTNIWkc">  The Beatles </a></li>
+          <li> <a href="https://www.youtube.com/watch?v=6NXnxTNIWkc">  The Beatles </a></li>
+        </ol>
+      </div>
+    </p>
   </body>
 </html>
